# kolibri_clean_v4

./: .gitignore  AGENTS.md  Makefile  README.md  build_macos.sh  pyrightconfig.json
configs/: cli_profiles.json  fractal_map.default.json  kolibri.json
core/: chain.c  chain.h  digit.c  digit.h  dsl.c  dsl.h  engine.c  engine.h  fractal.c  fractal.h  kolibri.c  kolibri.h  language.c  language.h  main.c  metrics.c  metrics.h  persist.c  persist.h  rng.c  rng.h  state.h  vote.c  vote.h
datasets/: demo.csv
docs/: DSL.md  STORAGE.md  VOTING.md  architecture.md  developer_handbook.md  fractal.md  index.md  kolibri_architecture_plan.md  module_reference.md  multimodal_core.md  phase2_capabilities_roadmap.md  planning_agents.md  project_overview.md  roadmap.md  runtime_and_operations.md
kolibri_x/: __init__.py
logs/: chain.jsonl  config_snapshot.json  dev_journal.md  mksi_report.json
smart_client/: README.md
smart_client/backend/: .gitignore  pyproject.toml
smart_client/backend/app/: audit.py  chat.py  config.py  kprl.py  main.py  memory.py  tools.py
smart_client/backend/tests/: test_math_solver.py  test_smart_client_e2e.py
tests/: test_action_journal_persistence.py  test_chat_cli.py  test_core.c  test_encoding.c  test_fa.c  test_graph_persistence.py  test_kolibri_x_pipeline.py  test_payload.c  test_reason_payload.py  test_skill_sandbox.py  test_skill_store_loading.py  test_verify_break.c
tools/: chain_verify.js  ksindex.py  profile_cli.py  replay_chain.py
ui/: app.js  index.html  offline.html  style.css
wasm/: build_wasm.sh  export.c  export.h
(+128 files in other folders)
